--- a/Problem1BiasAndVariance/Problem1BiasAndVariance.csproj
+++ b/Problem1BiasAndVariance/Problem1BiasAndVariance.csproj
@@ -67,7 +67,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Statistics\ChiSquaredUtils.cs" />
+    <Compile Include="Statistics\ModeFinder.cs" />
     <Compile Include="Statistics\PercentileCalculation.cs" />
+    <Compile Include="Statistics\Transformer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
