New project for bayes calculation

--- a/Problem1BiasAndVariance/Problem4NaiveBayes/Problem4NaiveBayes.csproj
+++ b/Problem1BiasAndVariance/Problem4NaiveBayes/Problem4NaiveBayes.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{25B0B2EE-6D8E-4C52-AF62-8DDDED800E48}</ProjectGuid>
+    <ProjectGuid>{8D5E7D21-3AF4-4C91-8AAE-B83F13E44C9F}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Problem4SVMAndNaiveBayes</RootNamespace>
-    <AssemblyName>Problem4SVMAndNaiveBayes</AssemblyName>
+    <RootNamespace>Problem4NaiveBayes</RootNamespace>
+    <AssemblyName>Problem4NaiveBayes</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -33,10 +33,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="LibSVMsharp, Version=1.0.0.0, Culture=neutral, processorArchitecture=x86">
-      <HintPath>..\Problem1BiasAndVariance\packages\LibSVMsharp.1.2.4\lib\net45\LibSVMsharp.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -54,17 +50,9 @@
     <Compile Include="DataSet\ParserUtils.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Statistics\PercentileCalculation.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="LIBSVM_COPYRIGHT" />
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="libsvm.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
