--- a/Problem1BiasAndVariance/Problem4NaiveBayes/Problem4NaiveBayes.csproj
+++ b/Problem1BiasAndVariance/Problem4NaiveBayes/Problem4NaiveBayes.csproj
@@ -50,6 +50,7 @@
     <Compile Include="DataSet\ParserUtils.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Statistics\PercentileCalculation.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
