--- a/Problem4NaiveBayes/Problem4NaiveBayes.csproj
+++ b/Problem4NaiveBayes/Problem4NaiveBayes.csproj
@@ -53,7 +53,11 @@
     <Compile Include="Parsing\BucketCount.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Statistics\BiasAndVarianceCalculator.cs" />
+    <Compile Include="Statistics\IPredictor.cs" />
+    <Compile Include="Statistics\ModeFinder.cs" />
     <Compile Include="Statistics\PercentileCalculation.cs" />
+    <Compile Include="Statistics\Transformer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
