--- a/Problem4SVMAndNaiveBayes/Problem4SVM.csproj
+++ b/Problem4SVMAndNaiveBayes/Problem4SVM.csproj
@@ -33,10 +33,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="LibSVMsharp, Version=1.0.0.0, Culture=neutral, processorArchitecture=x86">
-      <HintPath>..\Problem1BiasAndVariance\packages\LibSVMsharp.1.2.4\lib\net45\LibSVMsharp.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -47,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Bagging.cs" />
     <Compile Include="DataSet\DataSetAttribute.cs" />
     <Compile Include="DataSet\DataSetCleaner.cs" />
     <Compile Include="DataSet\DataSetValue.cs" />
@@ -54,7 +51,11 @@
     <Compile Include="DataSet\ParserUtils.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Statistics\BiasAndVarianceCalculator.cs" />
+    <Compile Include="Statistics\IPredictor.cs" />
+    <Compile Include="Statistics\ModeFinder.cs" />
     <Compile Include="Statistics\PercentileCalculation.cs" />
+    <Compile Include="Statistics\Transformer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -63,6 +64,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="libsvm.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="svm-predict.exe">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="svm-train.exe">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
